build/00009/GPIOhunt_esp32.log
Processing esp32 (board: esp32doit-devkit-v1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Tool Manager: Installing https://github.com/pioarduino/registry/releases/download/0.0.1/esptoolpy-v5.1.0.zip
Unpacking 0% 10% 20%
Tool Manager: tool-esptoolpy@5.1.0 has been installed!
Tool Manager: Installing file:///home/runner/.platformio/tools/tool-esptoolpy
Tool Manager: tool-esptoolpy@5.1.0 has been installed!
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32doit-devkit-v1.html
PLATFORM: Espressif 32 (55.3.35) > DOIT ESP32 DEVKIT V1
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting GPIOhunt.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
Building in release mode
Compiling .pio/build/esp32/src/GPIOhunt.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:1:
.pio/libdeps/esp32/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:7:50: error: no matching function for call to 'H4P_WiFi::H4P_WiFi(const char [9], const char [9], const char [11])'
    7 | H4P_WiFi wiffy("XXXXXXXX","XXXXXXXX","lightrider");
      |                                                  ^
In file included from .pio/libdeps/esp32/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/esp32/H4Plugins/src/H4Plugins.h:10:
.pio/libdeps/esp32/H4Plugins/src/H4P_WiFi.h:133:9: note: candidate: 'H4P_WiFi::H4P_WiFi(const std::string&)'
  133 |         H4P_WiFi(const std::string& device=""):
      |         ^~~~~~~~
.pio/libdeps/esp32/H4Plugins/src/H4P_WiFi.h:133:9: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/esp32/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(const H4P_WiFi&)'
   63 | class H4P_WiFi: public H4Service, public H4AsyncWebServer {
      |       ^~~~~~~~
.pio/libdeps/esp32/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/esp32/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(H4P_WiFi&&)'
.pio/libdeps/esp32/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:9:19: error: 'D1' was not declared in this scope; did you mean 'y1'?
    9 | h4pEncoderAuto ea(D1,D2,INPUT,ACTIVE_HIGH,0,3,1,0,true); // false = no wrap
      |                   ^~
      |                   y1
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:9:22: error: 'D2' was not declared in this scope; did you mean 'T2'?
    9 | h4pEncoderAuto ea(D1,D2,INPUT,ACTIVE_HIGH,0,3,1,0,true); // false = no wrap
      |                      ^~
      |                      T2
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:13:17: error: 'D6' was not declared in this scope; did you mean 'T6'?
   13 |   new h4pOutput(D6,ACTIVE_HIGH,H4P_UILED_RED),
      |                 ^~
      |                 T6
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:14:17: error: 'D7' was not declared in this scope; did you mean 'T7'?
   14 |   new h4pOutput(D7,ACTIVE_HIGH,OFF,H4P_UILED_ORANGE),
      |                 ^~
      |                 T7
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:15:17: error: 'D8' was not declared in this scope; did you mean 'T8'?
   15 |   new h4pOutput(D8,ACTIVE_HIGH,OFF,H4P_UILED_GREEN),
      |                 ^~
      |                 T8
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:17:1: error: could not convert '{<expression error>, <expression error>, <expression error>, (operator new(56), ((true, (((h4pOutput*)<anonymous>)->h4pOutput::h4pOutput(((int)((uint8_t)LED_BUILTIN)), ((int)ACTIVE_LOW), 0, ((int)((uint8_t)H4P_UILED_BLUE)), ((npNODE*)(operator new(4), ((true, (((npPUBLISHVALUE*)<anonymous>)->npPUBLISHVALUE::npPUBLISHVALUE(), (<anonymous> = false))), ((npPUBLISHVALUE*)<anonymous>))))), (<anonymous> = false))), ((h4pOutput*)<anonymous>)))}' from '<brace-enclosed initializer list>' to 'std::vector<h4pOutput*>'
   17 | };
      | ^
      | |
      | <brace-enclosed initializer list>
In file included from .pio/libdeps/esp32/H4Plugins/src/H4P_AsyncHTTP.h:32,
                 from .pio/libdeps/esp32/H4Plugins/src/H4Plugins.h:9:
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino: In function 'void h4pGlobalEventHandler(const std::string&, H4PE_TYPE, const std::string&)':
.pio/libdeps/esp32/H4Plugins/src/H4Service.h:432:38: error: 'onGPIO' was not declared in this scope
  432 | #define H4PEVENTCALL(e,s,m) H4PGLUE2(on,e)(s,m)
      |                                      ^~
.pio/libdeps/esp32/H4Plugins/src/H4Service.h:427:23: note: in definition of macro 'H4PGLUE2'
  427 | #define H4PGLUE2(x,y) x##y
      |                       ^
.pio/libdeps/esp32/H4Plugins/src/H4Service.h:474:5: note: in expansion of macro 'H4PEVENTCALL'
  474 |     H4PEVENTCALL(e,STOI(svc),STOI(msg)); \
      |     ^~~~~~~~~~~~
.pio/libdeps/esp32/H4Plugins/src/H4Service.h:485:35: note: in expansion of macro 'H4P_FUNCTION_ADAPTER_II'
  485 | #define H4P_FUNCTION_ADAPTER_GPIO H4P_FUNCTION_ADAPTER_II(GPIO)
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:21:5: note: in expansion of macro 'H4P_FUNCTION_ADAPTER_GPIO'
   21 |     H4P_FUNCTION_ADAPTER_GPIO;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino: In function 'void onGPIO(uint8_t, int)':
/home/runner/work/h4plugins/h4plugins/build/esp32/src/GPIOhunt.ino:42:10: error: 'D1' was not declared in this scope; did you mean 'y1'?
   42 |     case D1: // encoder
      |          ^~
      |          y1
*** [.pio/build/esp32/src/GPIOhunt.ino.cpp.o] Error 1
========================== [FAILED] Took 9.69 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
esp32          FAILED    00:00:09.685
==================== 1 failed, 0 succeeded in 00:00:09.685 ====================